AI-JADEDEVS4/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Email_1_Sent_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing Ops Checklist</description>
        <inlineHelpText>Email 1 has been sent for approval.</inlineHelpText>
        <label>CB: Email #1 Sent for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Banner_Headline__c</fullName>
        <label>Email Banner Headline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Copy_Link__c</fullName>
        <description>Link to copy</description>
        <inlineHelpText>Link to copy</inlineHelpText>
        <label>Email Copy Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Email_Copy__c</fullName>
        <label>Email Copy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Invite_1_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing Ops Checklist</description>
        <inlineHelpText>Email invite 1 has been created in Eloqua. This is updated by the Campaign Owner.</inlineHelpText>
        <label>Email Invite #1 Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Invite_1__c</fullName>
        <defaultValue>Today() +2</defaultValue>
        <description>Drop date for the first email invitation</description>
        <label>Email Invite #1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Invite_2__c</fullName>
        <description>Drop Date for the 2nd event invite</description>
        <label>Email Invite #2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Invite_3__c</fullName>
        <description>Drop Date for invite #3</description>
        <label>Email Invite #3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Received__c</fullName>
        <description>Emails delivered - Bouncebacks</description>
        <formula>Emails_Delivered__c  - Bounce_Backs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Emails delivered - Bouncebacks</inlineHelpText>
        <label>Email Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Reminder_1_Day__c</fullName>
        <description>Send Date of Email Reminder 1 day before event start date</description>
        <inlineHelpText>Send Date of Email Reminder 1 day before event start date</inlineHelpText>
        <label>Email Reminder 1 Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Reminder_1_WK__c</fullName>
        <description>Date of 1st email reminder send date, 1 week before event date</description>
        <inlineHelpText>Date of 1st email reminder send date, 1 week before start date</inlineHelpText>
        <label>Email Reminder 1 WK</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Visitor__c</fullName>
        <inlineHelpText>The number of distinct visitors to a Web site via an Email link</inlineHelpText>
        <label>Email Visitor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emails_2_3_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing Ops Checkbox</description>
        <inlineHelpText>Emails 2 and/or 3 have been created in Eloqua. This is updated by the campaign owner.</inlineHelpText>
        <label>Emails #2 &amp; #3 Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emails_Delivered__c</fullName>
        <description>Count of email delivered</description>
        <inlineHelpText>Count of email delivered</inlineHelpText>
        <label>Emails Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emails_Sent__c</fullName>
        <description>Count of names sent</description>
        <inlineHelpText>Count of names sent</inlineHelpText>
        <label>Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_End_Time__c</fullName>
        <label>Event End Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_ICS_File__c</fullName>
        <formula>IF(
OR(
   ISBLANK(Event_Start_Time__c),
   ISBLANK(Event_End_Time__c),
   ISBLANK(Event_Time_Zone_2__c),
   ISBLANK(Venue_Name__c)
  )
  ,
  &quot;Data Missing&quot;
  ,
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(&quot;http://adaptivecommunity.com/calmaker/?location=&quot; &amp;Venue_Name__c &amp;
&quot;&amp;startDate=&quot;&amp; TEXT(YEAR(StartDate))+ IF(LEN(TEXT(MONTH(StartDate)))=1,&quot;0&quot;,null) + TEXT(MONTH(StartDate))+ IF(LEN(TEXT(DAY(StartDate)))=1,&quot;0&quot;,null) + TEXT(DAY(StartDate)) &amp;
&quot;T&quot; &amp;  

IF(UPPER(RIGHT(Event_Start_Time__c,2))=&quot;AM&quot;,IF(RIGHT(LEFT(Event_Start_Time__c,2),1)=&quot;:&quot;,&quot;0&quot;+LEFT(Event_Start_Time__c,1),LEFT(Event_Start_Time__c,2)),IF(RIGHT(LEFT(Event_Start_Time__c,2),1)=&quot;:&quot;,TEXT(VALUE(LEFT(Event_Start_Time__c,1))+12),IF(AND(LEFT(Event_Start_Time__c,2)=&quot;12&quot;,UPPER(RIGHT(Event_Start_Time__c,2))=&quot;PM&quot;),&quot;12&quot;,TEXT(VALUE(LEFT(Event_Start_Time__c,2))+12)))) + 

IF(RIGHT(LEFT(Event_Start_Time__c,2),1)=&quot;:&quot;,RIGHT(LEFT(Event_Start_Time__c,4),2),RIGHT(LEFT(Event_Start_Time__c,5),2)) &amp; &quot;00&quot; &amp;
 
CASE(Event_Time_Zone_2__c, &quot;AEST&quot;,&quot;%2B1000&quot;,&quot;NZDT&quot;,&quot;%2B1300&quot;,&quot;NZST&quot;,&quot;%2B1200&quot;, &quot;AEDT&quot;,&quot;%2B1100&quot;,&quot;GMT&quot;,&quot;-0000&quot;,&quot;ET&quot;,&quot;-0500&quot;,&quot;CT&quot;,&quot;-0600&quot;,&quot;MT&quot;,&quot;-0700&quot;,&quot;PT&quot;,&quot;-0800&quot;,&quot;&quot;)&amp;

&quot;&amp;endDate=&quot; &amp; TEXT(YEAR(EndDate))+ IF(LEN(TEXT(MONTH(EndDate)))=1,&quot;0&quot;,null) + TEXT(MONTH(EndDate))+ IF(LEN(TEXT(DAY(EndDate)))=1,&quot;0&quot;,null) + TEXT(DAY(EndDate)) &amp;
&quot;T&quot; &amp; 

IF(UPPER(RIGHT(Event_End_Time__c,2))=&quot;AM&quot;,IF(RIGHT(LEFT(Event_End_Time__c,2),1)=&quot;:&quot;,&quot;0&quot;+LEFT(Event_End_Time__c,1),LEFT(Event_End_Time__c,2)),IF(RIGHT(LEFT(Event_End_Time__c,2),1)=&quot;:&quot;,TEXT(VALUE(LEFT(Event_End_Time__c,1))+12),IF(AND(LEFT(Event_End_Time__c,2)=&quot;12&quot;,UPPER(RIGHT(Event_End_Time__c,2))=&quot;PM&quot;),&quot;12&quot;,TEXT(VALUE(LEFT(Event_End_Time__c,2))+12))))

+ IF(RIGHT(LEFT(Event_End_Time__c,2),1)=&quot;:&quot;,RIGHT(LEFT(Event_End_Time__c,4),2),RIGHT(LEFT(Event_End_Time__c,5),2))  


&amp; &quot;00&quot; &amp;

CASE(Event_Time_Zone_2__c, &quot;AEST&quot;,&quot;%2B1000&quot;,&quot;NZDT&quot;,&quot;%2B1300&quot;,&quot;NZST&quot;,&quot;%2B1200&quot;,  &quot;AEDT&quot;,&quot;%2B1100&quot;,&quot;GMT&quot;,&quot;-0000&quot;,&quot;ET&quot;,&quot;-0500&quot;,&quot;CT&quot;,&quot;-0600&quot;,&quot;MT&quot;,&quot;-0700&quot;,&quot;PT&quot;,&quot;-0800&quot;,&quot;&quot;) &amp;

&quot;&amp;summary=&quot; &amp; SUBSTITUTE(Event_Title_Unformatted__c,&quot;&amp;&quot;,&quot;%26&quot;)  &amp;
&quot;&amp;description=&quot; &amp;  Venue_Name__c  &amp; &quot;%5Cn%5Cn%5Cn&quot; &amp;
TEXT(MONTH( StartDate)) &amp; &quot;%2F&quot; &amp; TEXT(DAY( StartDate)) &amp; &quot;%2F&quot; &amp; TEXT(YEAR( StartDate)) &amp; &quot;%5Cn&quot; &amp; Event_Start_Time__c &amp; &quot;%20-%20&quot; &amp; Event_End_Time__c &amp; &quot;%5Cn%5Cn&quot; &amp; Venue_Address_Website__c &amp; &quot;%5Cn%5Cn&quot; &amp; Venue_Name__c  &amp; &quot;%5Cn&quot;
&amp; Venue_Address_1__c  &amp; &quot;%5Cn&quot;
&amp; Venue_Address_City__c  &amp;&quot;,%20&quot; &amp; Venue_Address_State__c &amp; &quot;%20&quot; &amp; Venue_Address_Postal_Code__c
,&quot; &quot;,&quot;%20&quot;),&quot;&apos;&quot;,&quot;&quot;),&quot;é&quot;,&quot;%E9&quot;)
)</formula>
        <label>Event ICS File</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Listing_Website_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing Ops Checkbox</description>
        <inlineHelpText>Event has been created on the Website. This is updated by Marketing Ops.</inlineHelpText>
        <label>Event Listing (Website) Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Location_City__c</fullName>
        <description>City where the event is held</description>
        <inlineHelpText>City where the event is held</inlineHelpText>
        <label>Event Location-City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Location_State__c</fullName>
        <description>Two letter State where event is held</description>
        <inlineHelpText>Two letter State or two letter country code where event is held</inlineHelpText>
        <label>Event Location-State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Time__c</fullName>
        <description>Time frame for the event (example 8:00 to 11:00 AM)</description>
        <inlineHelpText>Time frame for the event (example 8:00 to 11:00 AM)</inlineHelpText>
        <label>Event Start Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Time_Zone_2__c</fullName>
        <label>Event Time Zone 2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Time_Zone__c</fullName>
        <description>3-5 letter abbreviation for the event time zone (PST, MST, CST, EST)</description>
        <inlineHelpText>3-5 letter abbreviation for the event time zone (PST, MST, CST, EST)</inlineHelpText>
        <label>Event Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>AET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Time__c</fullName>
        <label>Event Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Title_Unformatted__c</fullName>
        <label>Event Title - Unformatted</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Website_Details__c</fullName>
        <label>Event Website Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Website_Title__c</fullName>
        <description>Automatically created from campaign details</description>
        <formula>IF( Event_Title_Unformatted__c = &quot;&quot;, CASE( Type ,
&quot;Seminar&quot;, &quot;Seminar&quot;,
&quot;Seminar Plus Fun Event&quot;, &quot;Seminar Plus Fun Event&quot;,
&quot;Workshop&quot;, &quot;Workshop&quot;,
&quot;Workshop Plus Fun Event&quot;, &quot;Workshop Plus Fun Event&quot;,
&quot;Lessons Over Lunch&quot;,&quot;Lessons Over Lunch&quot;,
&quot;Networking Event&quot;,&quot;Networking Event&quot;,
&quot;AD Seminar&quot;, &quot;AD Seminar&quot;,
&quot;Consolidation Seminar&quot;, &quot;Consolidation Seminar&quot;,
&quot;Consolidation Lessons Over Lunch&quot;, &quot;Consolidation Lessons Over Lunch&quot;,
&quot;Consolidation Workshop&quot;, &quot;Consolidation Workshop&quot;,
&quot;Finance Revolution Tour&quot;, &quot;Finance Revolution Tour&quot;,
&quot;Thought Leadership&quot;, &quot;Thought Leadership&quot;,
&quot;Vertical - Education LOL&quot;,&quot;Lessons Over Lunch&quot;,
&quot;Vertical - Education Seminar&quot;,&quot;Seminar&quot;,
&quot;Vertical - Energy LOL&quot;,&quot;Lessons Over Lunch&quot;,
&quot;Vertical - Energy Seminar&quot;,&quot;Seminar&quot;,
&quot;Vertical - Healthcare LOL&quot;,&quot;Lessons Over Lunch&quot;,
&quot;Vertical - Healthcare Seminar&quot;,&quot;Seminar&quot;,
&quot;Vertical - Manufacturing LOL&quot;,&quot;Lessons Over Lunch&quot;,
&quot;Vertical - Manufacturing Seminar&quot;,&quot;Seminar&quot;,
&quot;Vertical - Nonprofit LOL&quot;,&quot;Lessons Over Lunch&quot;,
&quot;Vertical - Nonprofit Seminar&quot;,&quot;Seminar&quot;,
&quot;Vertical - Software LOL&quot;,&quot;Lessons Over Lunch&quot;,
&quot;Vertical - Software Seminar&quot;,&quot;Seminar&quot;,
&quot;Vertical - Biotech Seminar&quot;, &quot;Seminar&quot;,
&quot;Vertical - Biotech LOL&quot;, &quot;Lessons Over Lunch&quot;,
&quot;Vertical - Financial Services Seminar&quot;, &quot;Seminar&quot;,
&quot;Vertical - Financial Services LOL&quot;, &quot;Lessons Over Lunch&quot;,
&quot;Error! Missing Campaign Type&quot;) &amp; &quot;  in &quot; &amp;  Event_Location_City__c  &amp; &quot; &quot; &amp; Event_Location_State__c  &amp; &quot;, &quot; &amp;  
IF(MONTH(StartDate)=1,&quot;January&quot;,
    IF(MONTH(StartDate)=2,&quot;February&quot;,
    IF (MONTH(StartDate)=3,&quot;March&quot;,
    IF(MONTH(StartDate)=4,&quot;April&quot;,
    IF(MONTH(StartDate)=5,&quot;May&quot;,
    IF(MONTH(StartDate)=6,&quot;June&quot;,
    IF(MONTH(StartDate)=7,&quot;July&quot;,
    IF(MONTH(StartDate)=8,&quot;August&quot;,
    IF(MONTH(StartDate)=9,&quot;September&quot;,
    IF(MONTH(StartDate)=10,&quot;October&quot;,
    IF(MONTH(StartDate)=11,&quot;November&quot;,&quot;December&quot;))))))))))) &amp; &quot; &quot; &amp; TEXT(DAY(StartDate)),
 Event_Title_Unformatted__c )</formula>
        <inlineHelpText>You can&apos;t change this, its automatically created from campaign details. Change the field above &quot;Event Title - Unformatted&quot;</inlineHelpText>
        <label>Event Website Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Leads__c</fullName>
        <formula>ExpectedResponse  *  NumberSent</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Num Sent * Expected Resp Rate</inlineHelpText>
        <label>Expected Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_TM_Leads__c</fullName>
        <description>How many target market leads are we expected this campaign to generate</description>
        <inlineHelpText>How many target market leads are we expected this campaign to generate</inlineHelpText>
        <label>Expected TM Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facilitator_Name__c</fullName>
        <label>Facilitator Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Processor_Step_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing Ops Checkbox. This field is being phased out.</description>
        <label>CB: Form Processor Step Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guest_Speaker_Due_Date__c</fullName>
        <description>When do we need to finalize the Guest Speaker by</description>
        <label>Guest Speaker Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guest_Speaker_Name__c</fullName>
        <description>Campaign Project Detail</description>
        <inlineHelpText>Name of Guest Speaker</inlineHelpText>
        <label>Guest Speaker Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Guest_Speaker_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campaign Project Detail</description>
        <inlineHelpText>Who&apos;s responsible for securing the guest speaker</inlineHelpText>
        <label>Guest Speaker Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guest_Speaker_Title__c</fullName>
        <label>Guest Speaker Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_Speaker_ckbx__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campaign Project Detail</description>
        <inlineHelpText>Check if guest speaker is needed</inlineHelpText>
        <label>Guest Speaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HS_Email_Name__c</fullName>
        <description>Name of the email in Hubspot</description>
        <label>HS Email Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HS_Link_to_DOR_Email__c</fullName>
        <description>Link to the Date of Reminder email in Eloqua.</description>
        <inlineHelpText>Link to the Date of Reminder email in Eloqua.</inlineHelpText>
        <label>HS Link to DOR Email</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HS_Link_to_Email_1__c</fullName>
        <description>Link to HubSpot email asset</description>
        <inlineHelpText>Link to HubSpot email asset</inlineHelpText>
        <label>HS Link to Email 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HS_Link_to_Email_2__c</fullName>
        <description>Link to Eloqua email</description>
        <inlineHelpText>Link to Eloqua email</inlineHelpText>
        <label>HS Link to Email 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HS_Link_to_Email_3__c</fullName>
        <description>Link to Email 3 in Eloqua. Requested by Tori Cole, 2/1/16</description>
        <inlineHelpText>Link to Email 3 in Eloqua.</inlineHelpText>
        <label>HS Link to Email 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HS_Template_Name__c</fullName>
        <description>Name of the email template to use</description>
        <inlineHelpText>Name of the email template to use</inlineHelpText>
        <label>HS Template Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Workflow_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing Ops Checkbox</description>
        <inlineHelpText>Campaign has been created in HubSpot.</inlineHelpText>
        <label>HS Workflow Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HS_Workflow_Link__c</fullName>
        <description>Link to Hubspot Campaign</description>
        <inlineHelpText>Link to Hubspot Campaign</inlineHelpText>
        <label>HS Workflow Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Hotel_Rooms__c</fullName>
        <label>Hotel Rooms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ICS_File_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing Ops Checkbox</description>
        <inlineHelpText>The ICS file has been created. This is updated by Marketing Ops.</inlineHelpText>
        <label>ICS File Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICS_File_URL__c</fullName>
        <description>URL of ICS file</description>
        <inlineHelpText>URL of ICS file</inlineHelpText>
        <label>ICS File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ICS_Invitation_URL__c</fullName>
        <label>ICS Invitation URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image_Email_Header__c</fullName>
        <description>URL of email header in Eloqua</description>
        <inlineHelpText>URL of email header in Eloqua</inlineHelpText>
        <label>Image Email Header</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image_WP_Header__c</fullName>
        <description>URL of WP header image in Eloqua</description>
        <inlineHelpText>URL of WP header image in Eloqua</inlineHelpText>
        <label>Image WP Header</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image_WP_Stacked__c</fullName>
        <description>URL of WP side stacked image</description>
        <inlineHelpText>URL of WP side stacked image</inlineHelpText>
        <label>Image WP Stacked</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Invitation_Specifications__c</fullName>
        <label>Invitation Specifications</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LP_Copy_Link__c</fullName>
        <label>LP Copy Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LP_Name_1__c</fullName>
        <description>LP name</description>
        <inlineHelpText>LP name</inlineHelpText>
        <label>LP Name 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LP_Name_2__c</fullName>
        <description>LP name</description>
        <inlineHelpText>LP name</inlineHelpText>
        <label>LP Name 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LP_Name_3__c</fullName>
        <description>LP Name</description>
        <inlineHelpText>LP Name</inlineHelpText>
        <label>LP Name 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LP_URL_Live_1__c</fullName>
        <description>Live URL to LP</description>
        <inlineHelpText>Live URL to LP</inlineHelpText>
        <label>LP Public URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LP_URL_Live_2__c</fullName>
        <description>Live URL to LP</description>
        <inlineHelpText>Live URL to LP</inlineHelpText>
        <label>LP Public URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LP_URL_Live_3__c</fullName>
        <description>Live URL to LP</description>
        <inlineHelpText>Live URL to LP</inlineHelpText>
        <label>LP URL Live 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LP_URL_Working_1__c</fullName>
        <description>URL to the LP in Eloqua</description>
        <inlineHelpText>URL to the LP in Eloqua</inlineHelpText>
        <label>LP: Eloqua URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LP_URL_Working_2__c</fullName>
        <description>URL to the LP in Eloqua</description>
        <inlineHelpText>URL to the LP in Eloqua</inlineHelpText>
        <label>LP: Elq URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LP_URL_Working_3__c</fullName>
        <description>URL to the LP in Eloqua</description>
        <inlineHelpText>URL to the LP in Eloqua</inlineHelpText>
        <label>LP: URL Working 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Image__c</fullName>
        <label>Link to Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>List_Pull_Criteria_Area_Codes__c</fullName>
        <description>Area Codes for List Pull</description>
        <inlineHelpText>Area Codes for List Pull (separate by commas; 909,808)</inlineHelpText>
        <label>List Pull Criteria: Area Codes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>List_Pull_Criteria_States_of_Area_Codes__c</fullName>
        <description>States in which area codes where selected from</description>
        <inlineHelpText>States in which area codes where selected from</inlineHelpText>
        <label>List Pull Criteria: States of Area Codes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarOps_App2Launch_Running_R2__c</fullName>
        <formula>Status_In_Production_R2__c -  Status_Approved_2_Launch_R2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: App2Launch-Running R2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_App2Launch_Running__c</fullName>
        <description>MarOps time difference between Approved 2 Launch and Running</description>
        <formula>Status_Running__c -  Status_Approved_2_Launch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: App2Launch-Running</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_DetailsApproved_InProduction_R2__c</fullName>
        <formula>Status_Details_Approved_R2__c -  Status_In_Production_R2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: DetailsApproved-InProduction R2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_DetailsApproved_InProduction__c</fullName>
        <description>MarOps time difference between Details Approved to In Production</description>
        <formula>Status_In_Production__c -  Status_Detailed_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: DetailsApproved-InProduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_DynamicContent_ICS_File__c</fullName>
        <formula>Status_Dynamic_Content_Created__c -  Status_ICS_Tested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: DynamicContent-ICS File</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_Elqcampaign_Partner_HTML__c</fullName>
        <formula>Status_Partner_Email_Sent__c - Status_Elq_Campaign_Created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: Elqcampaign-Partner HTML</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_Elqcampaign_SegmentCreated__c</fullName>
        <formula>Status_Elq_Campaign_Created__c - Status_Segment_Created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: Elqcampaign-SegmentCreated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_Email2_3_Approved2Launch__c</fullName>
        <formula>Status_Approved_2_Launch__c - Status_Email_1_Sent_4_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: Email2-3-Approved2Launch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_EmailSent4Approval_App2Launch__c</fullName>
        <formula>Status_Approved_2_Launch__c - Status_Email_1_Sent_4_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: EmailSent4Approval-App2Launch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_Email_Sent4Approval_Email_Create__c</fullName>
        <formula>Status_Email_1_Sent_4_Approval__c - Status_Email_1_Created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: Email Sent4Approval-Email Create</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_End_Date_InProduction_Post__c</fullName>
        <formula>DATEVALUE(Status_In_Production_Post__c) - EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: End Date - InProduction Post</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_FormProcessor_SharedList__c</fullName>
        <formula>Status_Form_Processor_Created__c - Status_Shared_List_Created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: FormProcessor-SharedList</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_ICS_File_In_Production__c</fullName>
        <formula>Status_ICS_Tested__c -  Status_In_Production__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: ICS File-In Production</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_InProduction_App2Launch_R2__c</fullName>
        <formula>Status_In_Production_R2__c - Status_Approved_2_Launch_R2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: InProduction-App2Launch R2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_InProduction_App2Launch__c</fullName>
        <description>MarOps time difference between In production to Approved 2 launch</description>
        <formula>Status_Approved_2_Launch__c -  Status_In_Production__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MarOps time difference between In production to Approved 2 launch</inlineHelpText>
        <label>MarOps: InProduction-App2Launch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_InProduction_Approval2Launch__c</fullName>
        <formula>Status_Approved_2_Launch__c  - Status_In_Production__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: InProduction-Approval2Launch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_InProduction_Running_Post__c</fullName>
        <formula>Status_In_Production_Post__c - Status_Running_Post__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: InProduction-Running Post</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_Planning_Ready2Review__c</fullName>
        <description>MarOps time difference between Planning to Ready to Review</description>
        <formula>IF ( ISBLANK(Status_Planning__c),  Status_Ready_for_Review__c -  CreatedDate , Status_Ready_for_Review__c - Status_Planning__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: Planning-Ready2Review</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_Planning_WebsiteListing__c</fullName>
        <formula>Status_Website_Listing_Created__c  - Status_Planning__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: Planning-WebsiteListing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_Ready2Review_DetailsApproved__c</fullName>
        <description>MarOps time difference between Ready to Review to Detailed Approved</description>
        <formula>Status_Detailed_Approved__c -  Status_Ready_for_Review__c</formula>
        <inlineHelpText>MarOps time difference between Ready to Review to Detailed Approved</inlineHelpText>
        <label>MarOps: Ready2Review-DetailsApproved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_SegmentCreated_Emails2_3Created__c</fullName>
        <formula>Status_Segment_Created__c - Status_Emails_2_3_created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: SegmentCreated-Emails2-3Created</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_SharedList_DynamicContent__c</fullName>
        <formula>Status_Shared_List_Created__c -  Status_Dynamic_Content_Created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: SharedList-DynamicContent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_WebsiteList_FormProcessor__c</fullName>
        <formula>Status_Website_Listing_Created__c -  Status_Form_Processor_Created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: WebsiteList-FormProcessor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarOps_Website_Listing_Email_1_Created__c</fullName>
        <formula>Status_Email_1_Created__c -  Status_Website_Listing_Created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarOps: Website Listing-Email #1 Created</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign_SetUp_Detail_Note__c</fullName>
        <description>Record any detail notes, for the marketing team, about the campaign here</description>
        <label>Marketing Campaign SetUpDetail Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>